função querySelector e querySelectorAll

--- a/Browser/index.html
+++ b/Browser/index.html
@@ -5,18 +5,11 @@
     <title>Curso de JS !</title>
 </head>
 <body>
-    <a id = "link">google</a>
-    <br/>
-    <a class = "links">1</a>
-    <br/>
-    <a class = "links">2</a>
-    <br/>
-    <a class = "links">3</a>
-    <br/>
-    <p>Este é um paragrafo !</p>
-    <br/>
-    <p>Este é outro paragrafo !</p>
-
+    <form action="/" method="get">
+        <input type="text" name="username" class="input">
+        <input type="password" name="password" class="input">
+        <button type="submit" name="button" id="button" class="button">Enviar</button>
+    </form>
     <script src="window.js"></script>
 </body>
 </html>
